--- a/paper/trac2020.bib
+++ b/paper/trac2020.bib
@@ -1,3 +1,201 @@
+@inproceedings{offenseval,
+author = {Zampieri, Marcos and Malmasi, Shervin and Nakov, Preslav and Rosenthal, Sara and Farra, Noura and Kumar, Ritesh},
+booktitle = {Proc. 13th Int. Work. Semant. Eval.},
+title = {{SemEval-2019 Task 6: Identifying and Categorizing Offensive Language in Social Media (OffensEval)}},
+year = {2019}
+}
+@inproceedings{OLID,
+author = {Zampieri, Marcos and Malmasi, Shervin and Nakov, Preslav and Rosenthal, Sara and Farra, Noura and Kumar, Ritesh},
+booktitle = {Proc. NAACL},
+title = {{Predicting the Type and Target of Offensive Posts in Social Media}},
+year = {2019}
+}
+@inproceedings{trac2018report,
+address = {Santa Fe, USA},
+author = {Kumar, Ritesh and Ojha, Atul Kr. and Malmasi, Shervin and Zampieri, Marcos},
+booktitle = {Proc. First Work. Trolling, Aggress. Cyberbulling},
+title = {{Benchmarking Aggression Identification in Social Media}},
+year = {2018}
+}
+@inproceedings{davidson2017automated,
+author = {Davidson, Thomas and Warmsley, Dana and Macy, Michael and Weber, Ingmar},
+booktitle = {Proc. ICWSM},
+title = {{Automated Hate Speech Detection and the Problem of Offensive Language}},
+year = {2017}
+}
+@inproceedings{dinakar2011modeling,
+author = {Dinakar, Karthik and Reichart, Roi and Lieberman, Henry},
+booktitle = {Soc. Mob. Web},
+pages = {11--17},
+title = {{Modeling the detection of Textual Cyberbullying}},
+year = {2011}
+}
+@inproceedings{xu2012learning,
+author = {Xu, Jun-Ming and Jun, Kwang-Sung and Zhu, Xiaojin and Bellmore, Amy},
+booktitle = {Proc. 2012 Conf. North Am. chapter Assoc. Comput. Linguist. Hum. Lang. Technol.},
+organization = {Association for Computational Linguistics},
+pages = {656--666},
+title = {{Learning from bullying traces in social media}},
+year = {2012}
+}
+@incollection{dadvar2013improving,
+author = {Dadvar, Maral and Trieschnigg, Dolf and Ordelman, Roeland and de Jong, Franciska},
+booktitle = {Adv. Inf. Retr.},
+pages = {693--696},
+publisher = {Springer},
+title = {{Improving cyberbullying detection with user context}},
+year = {2013}
+}
+@inproceedings{kwok2013locate,
+author = {Kwok, Irene and Wang, Yuzhou},
+booktitle = {Twenty-Seventh AAAI Conf. Artif. Intell.},
+title = {{Locate the hate: Detecting Tweets Against Blacks}},
+year = {2013}
+}
+@article{burnap2015cyber,
+author = {Burnap, Pete and Williams, Matthew L},
+journal = {Policy {\&} Internet},
+number = {2},
+pages = {223--242},
+publisher = {Wiley Online Library},
+title = {{Cyber hate speech on twitter: An application of machine classification and statistical modeling for policy and decision making}},
+volume = {7},
+year = {2015}
+}
+@inproceedings{djuric2015hate,
+author = {Djuric, Nemanja and Zhou, Jing and Morris, Robin and Grbovic, Mihajlo and Radosavljevic, Vladan and Bhamidipati, Narayan},
+booktitle = {Proc. 24th Int. Conf. World Wide Web Companion},
+organization = {International World Wide Web Conferences Steering Committee},
+pages = {29--30},
+title = {{Hate speech detection with comment embeddings}},
+year = {2015}
+}
+@inproceedings{tulkens2016dictionary,
+address = {Portoroz, Slovenia},
+author = {Tulkens, St{\'{e}}phan and Hilte, Lisa and Lodewyckx, Elise and Verhoeven, Ben and Daelemans, Walter},
+booktitle = {Proc. Work. Text Anal. Cybersecurity Online Saf.},
+title = {{A Dictionary-based Approach to Racism Detection in Dutch Social Media}},
+year = {2016}
+}
+@inproceedings{ross2016measuring,
+address = {Bochum, Germany},
+author = {Ross, Bj{\"{o}}rn and Rist, Michael and Carbonell, Guillermo and Cabrera, Benjamin and Kurowsky, Nils and Wojatzki, Michael},
+booktitle = {Proc. Work. Nat. Lang. Process. Comput. Commun.},
+title = {{Measuring the Reliability of Hate Speech Annotations: The Case of the European Refugee Crisis}},
+year = {2016}
+}
+@inproceedings{nobata2016abusive,
+author = {Nobata, Chikashi and Tetreault, Joel and Thomas, Achint and Mehdad, Yashar and Chang, Yi},
+booktitle = {Proc. 25th Int. Conf. World Wide Web},
+organization = {International World Wide Web Conferences Steering Committee},
+pages = {145--153},
+title = {{Abusive Language Detection in Online User Content}},
+year = {2016}
+}
+@inproceedings{schmidt2017survey,
+address = {Valencia, Spain},
+author = {Schmidt, Anna and Wiegand, Michael},
+booktitle = {Proc. Fifth Int. Work. Nat. Lang. Process. Soc. Media. Assoc. Comput. Linguist.},
+pages = {1--10},
+title = {{A Survey on Hate Speech Detection Using Natural Language Processing}},
+year = {2017}
+}
+@article{schofield2017identifying,
+author = {Schofield, Alexandra and Davidson, Thomas},
+journal = {XRDS Crossroads, ACM Mag. Students},
+number = {2},
+pages = {56--59},
+publisher = {ACM},
+title = {{Identifying Hate Speech in Social Media}},
+volume = {24},
+year = {2017}
+}
+@inproceedings{mubarak2017,
+address = {Vancouver, Canada},
+author = {Mubarak, Hamdy and Kareem, Darwish and Walid, Magdy},
+booktitle = {Proc. Work. Abus. Lang. Online},
+title = {{Abusive Language Detection on Arabic Social Media}},
+year = {2017}
+}
+@inproceedings{fiser2017,
+address = {Vancouver, Canada},
+author = {Fi{\v{s}}er, Darja and Erjavec, Toma{\v{z}} and Ljube{\v{s}}i{\'{c}}, Nikola},
+booktitle = {Proc. Work. Work. Abus. Lang. Online},
+title = {{Legal Framework, Dataset and Annotation Schema for Socially Unacceptable On-line Discourse Practices in Slovene}},
+year = {2017}
+}
+@inproceedings{su2017,
+address = {Vancouver, Canada},
+author = {Su, Huei-Po and Huang, Chen-Jie and Chang, Hao-Tsung and Lin, Chuan-Jie},
+booktitle = {Proc. Work. Work. Abus. Lang. Online},
+title = {{Rephrasing Profanity in Chinese Text}},
+year = {2017}
+}
+@inproceedings{malmasi2017detecting,
+author = {Malmasi, Shervin and Zampieri, Marcos},
+booktitle = {Proc. Int. Conf. Recent Adv. Nat. Lang. Process.},
+pages = {467--472},
+title = {{Detecting Hate Speech in Social Media}},
+year = {2017}
+}
+@inproceedings{gamback2017using,
+author = {Gamb{\"{a}}ck, Bj{\"{o}}rn and Sikdar, Utpal Kumar},
+booktitle = {Proc. First Work. Abus. Lang. Online},
+pages = {85--90},
+title = {{Using Convolutional Neural Networks to Classify Hate-speech}},
+year = {2017}
+}
+@inproceedings{waseem2017understanding,
+author = {Waseem, Zeerak and Davidson, Thomas and Warmsley, Dana and Weber, Ingmar},
+booktitle = {Proc. First Work. Abus. Langauge Online},
+title = {{Understanding Abuse: A Typology of Abusive Language Detection Subtasks}},
+year = {2017}
+}
+@inproceedings{zhang2018detecting,
+author = {Zhang, Ziqi and Robinson, David and Tepper, Jonathan},
+booktitle = {Lect. Notes Comput. Sci.},
+organization = {Springer Verlag},
+title = {{Detecting Hate Speech on Twitter Using a Convolution-GRU Based Deep Neural Network}},
+year = {2018}
+}
+@article{malmasi2018challenges,
+author = {Malmasi, Shervin and Zampieri, Marcos},
+journal = {J. Exp. Theor. Artif. Intell.},
+number = {2},
+pages = {1--16},
+publisher = {Taylor {\&} Francis},
+title = {{Challenges in Discriminating Profanity from Hate Speech}},
+volume = {30},
+year = {2018}
+}
+@article{founta2018large,
+author = {Founta, Antigoni-Maria and Djouvas, Constantinos and Chatzakou, Despoina and Leontiadis, Ilias and Blackburn, Jeremy and Stringhini, Gianluca and Vakali, Athena and Sirivianos, Michael and Kourtellis, Nicolas},
+journal = {arXiv Prepr. arXiv1802.00393},
+title = {{Large Scale Crowdsourcing and Characterization of Twitter Abusive Behavior}},
+year = {2018}
+}
+@article{fortuna2018survey,
+author = {Fortuna, Paula and Nunes, S{\'{e}}rgio},
+journal = {ACM Comput. Surv.},
+number = {4},
+pages = {85},
+publisher = {ACM},
+title = {{A Survey on Automatic Detection of Hate Speech in Text}},
+volume = {51},
+year = {2018}
+}
+@article{elsherief2018hate,
+author = {ElSherief, Mai and Kulkarni, Vivek and Nguyen, Dana and Wang, William Yang and Belding, Elizabeth},
+journal = {arXiv Prepr. arXiv1804.04257},
+title = {{Hate Lingo: A Target-based Linguistic Analysis of Hate Speech in Social Media}},
+year = {2018}
+}
+@inproceedings{wiegand2018overview,
+author = {Wiegand, Michael and Siegel, Melanie and Ruppenhofer, Josef},
+booktitle = {Proc. GermEval},
+title = {{Overview of the GermEval 2018 Shared Task on the Identification of Offensive Language}},
+year = {2018}
+}
 @article{Wolf2019HuggingFacesTS,
 author = {Wolf, Thomas and Debut, Lysandre and Sanh, Victor and Chaumond, Julien and Delangue, Clement and Moi, Anthony and Cistac, Pierric and Rault, Tim and Louf, R'emi and Funtowicz, Morgan and Brew, Jamie},
 journal = {ArXiv},
@@ -388,6 +586,16 @@ title = {{AI-KU: Using Substitute Vectors and Co-Occurrence Modeling For Word Se
 url = {http://aclweb.org/anthology/S13-2050},
 year = {2013}
 }
+@inproceedings{K15-1026,
+author = {Schwartz, Roy and Reichart, Roi and Rappoport, Ari},
+booktitle = {Proc. Ninet. Conf. Comput. Nat. Lang. Learn.},
+doi = {10.18653/v1/K15-1026},
+pages = {258--267},
+publisher = {Association for Computational Linguistics},
+title = {{Symmetric Pattern Based Word Embeddings for Improved Word Similarity Prediction}},
+url = {http://aclweb.org/anthology/K15-1026},
+year = {2015}
+}
 @inproceedings{Kawahara:14,
 address = {Baltimore, MD, USA},
 author = {Kawahara, Daisuke and Peterson, Daniel W and Palmer, Martha},
@@ -398,16 +606,6 @@ series = {ACL{\~{}}2014},
 title = {{A Step-wise Usage-based Method for Inducing Polysemy-aware Verb Classes}},
 url = {https://aclweb.org/anthology/P14-1097},
 year = {2014}
-}
-@inproceedings{K15-1026,
-author = {Schwartz, Roy and Reichart, Roi and Rappoport, Ari},
-booktitle = {Proc. Ninet. Conf. Comput. Nat. Lang. Learn.},
-doi = {10.18653/v1/K15-1026},
-pages = {258--267},
-publisher = {Association for Computational Linguistics},
-title = {{Symmetric Pattern Based Word Embeddings for Improved Word Similarity Prediction}},
-url = {http://aclweb.org/anthology/K15-1026},
-year = {2015}
 }
 @inproceedings{S13-2049,
 author = {Jurgens, David and Klapaftis, Ioannis},
